# linear-cli

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  schema.graphql
.claude/: settings.json
.github/workflows/: ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
specs/001-initial-project-structure/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-linear-api-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-project-crud/: data-model.md  plan-cynic-migration.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-issue-crud/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/004-project-crud/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-improve-project-list/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-add-json-flag/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-filter-partial-title/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/008-delete-issue/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-issue-get-details/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: main.rs
src/application/: errors.rs  mod.rs
src/cli/: mod.rs  output.rs
src/domain/: errors.rs  mod.rs
tests/: e2e.rs  integration.rs
(+97 files in other folders)
