[package]
name = "linear"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "linear"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
cynic = "3"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
keyring = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
is-terminal = "0.4"
async-trait = "0.1"

[[test]]
name = "e2e"
path = "tests/e2e.rs"

[dependencies.dirs]
version = "5"

[dev-dependencies]
mockall = "0.13"
insta = "1"
tempfile = "3"
